dropshot/tests/fail/bad_server_only14.stderr
error: expected `;`, found `#`
  --> tests/fail/bad_server_only14.rs:15:17
   |
15 |     type Context
   |                 ^ help: add `;` here
16 |
17 |     #[endpoint {
   |     - unexpected token

error: expected `;`
  --> tests/fail/bad_server_only14.rs:17:5
   |
17 |     #[endpoint {
   |     ^

error[E0405]: cannot find trait `MyServer` in this scope
  --> tests/fail/bad_server_only14.rs:29:6
   |
29 | impl MyServer for MyImpl {
   |      ^^^^^^^^ not found in this scope

error[E0433]: failed to resolve: use of undeclared crate or module `my_server`
  --> tests/fail/bad_server_only14.rs:42:5
   |
42 |     my_server::foo();
   |     ^^^^^^^^^ use of undeclared crate or module `my_server`
